--- a/app/scripts/todo/ui/templates/grid-row.hbs
+++ b/app/scripts/todo/ui/templates/grid-row.hbs
@@ -1,2 +1,7 @@
-<th class="mdl-data-table__cell--non-numeric">Todo</th>
-<th>limitDate</th>
+<td>かいもの</td>
+<td>2016/1/1</td>
+<td class="btn-group-sm">
+    <button class="btn btn-danger btn-fab"><i class="material-icons">remove</i>
+        <div class="ripple-container"></div>
+    </button>
+</td>
