--- a/app/scripts/todo/ui/templates/grid-table.hbs
+++ b/app/scripts/todo/ui/templates/grid-table.hbs
@@ -1,10 +1,10 @@
-<table class="mdl-data-table mdl-js-data-table ">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th class="mdl-data-table__cell--non-numeric">Todo</th>
+            <th>Todo</th>
             <th>limitDate</th>
+            <th>delete</th>
         </tr>
     </thead>
-    <tbody id="todo-grid-rows">
-    </tbody>
+    <tbody id="todo-grid-rows"></tbody>
 </table>
