--- a/app/scripts/todo/ui/templates/grid-table.hbs
+++ b/app/scripts/todo/ui/templates/grid-table.hbs
@@ -1,8 +1,10 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
+            <th>Id</th>
             <th>Todo</th>
             <th>limitDate</th>
+            <th>complete</th>
             <th>delete</th>
         </tr>
     </thead>
