--- a/app/scripts/todo/ui/templates/dialog.hbs
+++ b/app/scripts/todo/ui/templates/dialog.hbs
@@ -1,7 +1,7 @@
-<button class="btn btn-default btn-fab" data-toggle="modal" data-target="#complete-dialog"><i class="material-icons">add</i>
+<button class="btn btn-default btn-fab" data-toggle="modal" data-target="#create-todo-dialog"><i class="material-icons">add</i>
     <div class="ripple-container"></div>
 </button>
-<div id="complete-dialog" class="modal fade in" tabindex="-1" style="display: none;">
+<div id="create-todo-dialog" class="modal fade in" tabindex="-1" style="display: none;">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -12,6 +12,8 @@
                 <form class="form-horizontal">
                     <fieldset>
                         <legend>TodoListに追加しましょう。</legend>
+                        <p class="error-message text-danger">
+                        </p>
                         <div class="form-group">
                             <label for="inputTodo" class="col-md-2 control-label">Todo</label>
                             <div class="col-md-10">
@@ -28,7 +30,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn-ok btn btn-primary" data-dismiss="modal">OK
+                <button type="button" class="btn-ok btn btn-primary">OK
                     <div class="ripple-container">
                         <div class="ripple ripple-on ripple-out" style="left: 45.6563px; top: 16px; transform: scale(10.875); background-color: rgb(0, 150, 136);"></div>
                     </div>
